# bevyml

./: Cargo.toml
bevyml/: Cargo.toml
bevyml-components/: Cargo.toml
bevyml-components/src/: lib.rs
bevyml-demo/: Cargo.toml  build.rs
bevyml-demo/assets/ui/: demo.bevyml
bevyml-demo/src/: main.rs
bevyml-parser/: Cargo.toml
bevyml-parser-cli/: Cargo.toml
bevyml-parser-cli/src/: main.rs
bevyml-parser/src/: attributes.rs  inode.rs  inode_info.rs  itree.rs  lib.rs
bevyml/src/: lib.rs
tree-sitter-bevyml/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  run-parser-tests.ps1  setup.py  tree-sitter.json
tree-sitter-bevyml/bindings/c/: tree-sitter-bevyml.pc.in
tree-sitter-bevyml/bindings/c/tree_sitter/: tree-sitter-bevyml.h
tree-sitter-bevyml/bindings/go/: binding.go  binding_test.go
tree-sitter-bevyml/bindings/node/: binding.cc  index.d.ts  index.js
tree-sitter-bevyml/bindings/python/tests/: test_binding.py
tree-sitter-bevyml/bindings/python/tree_sitter_bevyml/: __init__.py  binding.c
tree-sitter-bevyml/bindings/rust/: build.rs  lib.rs
tree-sitter-bevyml/bindings/swift/TreeSitterBevymlTests/: TreeSitterBevymlTests.swift
tree-sitter-bevyml/parse/: 01_massive_element_soup.html  02_inline_layout_blocks.html  03_nested_flex_dashboard.html  04_card_grid.html  05_form_surface.html  06_overflow_stress.html  07_image_and_alignment.html  08_zindex_layers.html  09_extreme_inline_styles.html  10_full_ui_shell.html  11_megacity_dashboard.html  12_scifi_terminal_ui.html  13_game_inventory_system.html  14_city_builder_control_room.html  15_space_station_management_ui.html  16_game_start_screen.html  17_player_hud.html  18_game_settings_menu.html  19_character_selection_screen.html  20_in_game_map_overlay.html  hello_world.html  index.html
tree-sitter-bevyml/src/: grammar.json  node-types.json  parser.c
