[workspace]
resolver = "2"
members = [
    "bevyml-components",
    "bevyml-parser",
    "bevyml-parser-cli",
    "tree-sitter-bevyml",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
tree-sitter-bevyml = { path = "tree-sitter-bevyml" }
bevyml-components = { path = "bevyml-components" }
bevyml-parser = { path = "bevyml-parser" }

# External
tree-sitter = "0.26.3"
bevy_derive = "0.17.3"
pollster = "0.4.0"
tokio = { version = "1.49.0", features = ["full"] }
bevy_ui = "0.17.3"
bevy_math = "0.17.3"
bevy_ecs = "0.17.3"
clap = { version = "4.5.54", features = ["derive"] }
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
