[package]
name = "bevyml-parser"
version = "0.1.0"
edition.workspace = true

[dependencies]
tree-sitter-bevyml.workspace = true
tree-sitter.workspace = true
bevy_derive.workspace = true
pollster.workspace = true
tokio.workspace = true
bevy_ui.workspace = true
bevy_math.workspace = true
bevy_color.workspace = true
bevy_ecs.workspace = true
bevy_log.workspace = true
bevy_reflect.workspace = true
strum.workspace = true
strum_macros.workspace = true
smallvec.workspace = true
