[package]
name = "tree-sitter-bevyml"
description = "A custom bevy markup language for building UI's using HTML+CSS"
version = "0.1.0"
authors = ["Armand Burger"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "bevyml"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-bevyml"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1.6"

[build-dependencies]
cc = "1.2.52"

[dev-dependencies]
tree-sitter = "0.26.3"
